3.6.3/_sources/gallery/lines_bars_and_markers/span_regions.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/lines_bars_and_markers/span_regions.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. meta::
        :keywords: codex

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_lines_bars_and_markers_span_regions.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_bars_and_markers_span_regions.py:


========================================================================
Shade regions defined by a logical mask using fill_between or span_where
========================================================================

Shade regions where a logical mask is True with `.Axes.fill_between` or with
`matplotlib.collections.BrokenBarHCollection.span_where`.

.. GENERATED FROM PYTHON SOURCE LINES 9-36

.. code-block:: default


    import numpy as np
    import matplotlib.pyplot as plt
    import matplotlib.collections as collections


    t = np.arange(0.0, 2, 0.01)
    s = np.sin(2*np.pi*t)

    fig, axs = plt.subplots(2, sharex=True, sharey=True)
    for ax in axs:
        ax.plot(t, s, color='black')
        ax.axhline(0, color='black')

    axs[0].set_title('using fill_between')
    axs[0].fill_between(t, 1, where=s > 0, facecolor='green', alpha=.5)
    axs[0].fill_between(t, -1, where=s < 0, facecolor='red', alpha=.5)

    axs[1].set_title('using span_where')
    axs[1].add_collection(collections.BrokenBarHCollection.span_where(
        t, ymin=0, ymax=1, where=s > 0, facecolor='green', alpha=0.5))
    axs[1].add_collection(collections.BrokenBarHCollection.span_where(
        t, ymin=-1, ymax=0, where=s < 0, facecolor='red', alpha=0.5))

    plt.show()





.. image-sg:: /gallery/lines_bars_and_markers/images/sphx_glr_span_regions_001.png
   :alt: using fill_between, using span_where
   :srcset: /gallery/lines_bars_and_markers/images/sphx_glr_span_regions_001.png, /gallery/lines_bars_and_markers/images/sphx_glr_span_regions_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 37-46

.. admonition:: References

   The use of the following functions, methods, classes and modules is shown
   in this example:

   - `matplotlib.axes.Axes.fill_between`
   - `matplotlib.collections.BrokenBarHCollection`
   - `matplotlib.collections.BrokenBarHCollection.span_where`
   - `matplotlib.axes.Axes.add_collection`


.. _sphx_glr_download_gallery_lines_bars_and_markers_span_regions.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: span_regions.py <span_regions.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: span_regions.ipynb <span_regions.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
